fix spacing when only one existing tag

--- a/src/style/content.less
+++ b/src/style/content.less
@@ -69,3 +69,7 @@
     }
 
 }
+
+#pr-streamer-tag {
+    margin-right: 0.5rem !important;
+}
